--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ dependencies = [
     "msal>=1.24.0",
     "httpx>=0.25.0",
     "python-dateutil>=2.8.2",
+    # PostgreSQL for persistent token storage
+    "psycopg2-binary>=2.9.0",
     "jinja2>=3.1.6",
     "markdown>=3.9",
     "pygments>=2.19.2",
